[package]
name = "bevy_voxels"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.0"
bevy-debug-text-overlay = "6.0.0"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.7.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "90b1c75022316a3dd89f3a1e8cf9cf3dfaf7f401" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
